--- a/index.html
+++ b/index.html
@@ -12,37 +12,50 @@
 </head>
 
 <body>
-    <section class="header">
+    <section class="header w-100">
         <header>
-            <div class="container">
-                <div class="row">
-                    <nav class="navbar navbar-expand-lg ">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="#">loopstudios</a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse justify-content-end" id="navbarText">
-                                <ul class="navbar-nav mb-2 mb-lg-0">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="#">About</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Careers</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Events</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Products</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Support</a>
-                                    </li>
-                                </ul>
+            <div class="col-12">
+                <div class="container">
+                    <div class="row">
+                        <nav class="navbar navbar-expand-lg ">
+                            <div class="container-fluid">
+                                <a class="navbar-brand" href="#">loopstudios</a>
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                                    <ul class="navbar-nav mb-2 mb-lg-0">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" aria-current="page" href="#">About</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Careers</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Events</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Products</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Support</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 h-100">
+                <div class="container h-100">
+                    <div class="row h-75 align-content-center">
+                        <div class="box-title">
+                            <h1 class="title-big">
+                                IMMERSIVE EXPERIENCES<br> THAT DELIVER
+                            </h1>
                         </div>
-                    </nav>
+                    </div>
                 </div>
             </div>
         </header>
