--- a/index.html
+++ b/index.html
@@ -60,6 +60,43 @@
             </div>
         </header>
     </section>
+    <section class="leader">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <img src="./assets/img/desktop/image-interactive.jpg" alt="interactive">
+                </div>
+                <div class="ab-leader col-6">
+                    <div class="row align-content-end h-100">
+                        <div class="col-12 box-leader">
+                            <h2 class="leader-title">
+                                THE LEADER IN INTERACTIVE VR
+                            </h2>
+                            <p class="p-leader">
+                                Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="creations">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <span class="d-flex justify-content-between">
+                        <h3 class="creations">
+                            OUR CREATIONS
+                        </h3>
+                        <a href="#" class="see">
+                            SEE ALL
+                        </a>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 
