--- a/index.html
+++ b/index.html
@@ -94,6 +94,86 @@
                         </a>
                     </span>
                 </div>
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-3">
+                            <a href="#">
+                                <div class="earth">
+                                    <h4 class="sub-creations">
+                                        DEEP<br> EARTH
+                                    </h4>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <div class="game">
+                                    <h4 class="sub-creations">
+                                        NIGHT<br> ARCADE
+                                    </h4>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <div class="soccer">
+                                    <h4 class="sub-creations ">
+                                        SOCCER<br> TEAM VR
+                                    </h4>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <div class="car">
+                                    <h4 class="sub-creations">
+                                        THE<br> GRID
+                                    </h4>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-3 ">
+                            <a href="#">
+                                <div class="race">
+                                    <h4 class="sub-creations">
+                                        FROM UP<br> ABOVE VR
+                                    </h4>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-3 ">
+                            <a href="#">
+                                <div class="aerial">
+                                    <h4 class="sub-creations">
+                                        POCKET<br> BOREALIS
+                                    </h4>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-3 ">
+                            <a href="#">
+                                <div class="robot">
+                                    <h4 class="sub-creations">
+                                        THE<br> CURIOSITY
+                                    </h4>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-3 ">
+                            <a href="#">
+                                <div class="picture">
+                                    <h4 class="sub-creations">
+                                        MAKE IT<br> FISHEYE
+                                    </h4>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
