finished animations and footer

--- a/index.html
+++ b/index.html
@@ -8,58 +8,61 @@
     <title>Loopstudios | Challenge</title>
     <link rel="stylesheet" href="./assets/css/loop-main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <section class="header w-100">
-        <header>
-            <div class="col-12">
-                <div class="container">
-                    <div class="row">
-                        <nav class="navbar navbar-expand-lg ">
-                            <div class="container-fluid">
-                                <a class="navbar-brand" href="#">loopstudios</a>
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <div class="collapse navbar-collapse justify-content-end" id="navbarText">
-                                    <ul class="navbar-nav mb-2 mb-lg-0">
-                                        <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="#">About</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">Careers</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">Events</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">Products</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">Support</a>
-                                        </li>
-                                    </ul>
+    <header>
+        <section class="header w-100">
+            <header>
+                <div class="col-12">
+                    <div class="container">
+                        <div class="row">
+                            <nav class="navbar navbar-expand-lg ">
+                                <div class="container-fluid">
+                                    <a class="navbar-brand" href="#">loopstudios</a>
+                                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
+                                    </button>
+                                    <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                                        <ul class="navbar-nav mb-2 mb-lg-0">
+                                            <li class="nav-item">
+                                                <a class="nav-link active" aria-current="page" href="#">About</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">Careers</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">Events</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">Products</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">Support</a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 h-100">
-                <div class="container h-100">
-                    <div class="row h-75 align-content-center">
-                        <div class="box-title">
-                            <h1 class="title-big">
-                                IMMERSIVE EXPERIENCES<br> THAT DELIVER
-                            </h1>
+                            </nav>
                         </div>
                     </div>
                 </div>
-            </div>
-        </header>
-    </section>
+                <div class="col-12 h-100">
+                    <div class="container h-100">
+                        <div class="row h-75 align-content-center">
+                            <div class="box-title">
+                                <h1 class="title-big">
+                                    IMMERSIVE EXPERIENCES<br> THAT DELIVER
+                                </h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </section>
+    </header>
     <section class="leader">
         <div class="container">
             <div class="row">
@@ -98,37 +101,37 @@
                     <div class="row">
                         <div class="col-3">
                             <a href="#">
+                                <h4 class="sub-creations">
+                                    DEEP<br> EARTH
+                                </h4>
                                 <div class="earth">
-                                    <h4 class="sub-creations">
-                                        DEEP<br> EARTH
-                                    </h4>
                                 </div>
                             </a>
                         </div>
                         <div class="col-3">
                             <a href="#">
+                                <h4 class="sub-creations">
+                                    NIGHT<br> ARCADE
+                                </h4>
                                 <div class="game">
-                                    <h4 class="sub-creations">
-                                        NIGHT<br> ARCADE
-                                    </h4>
                                 </div>
                             </a>
                         </div>
                         <div class="col-3">
                             <a href="#">
+                                <h4 class="sub-creations ">
+                                    SOCCER<br> TEAM VR
+                                </h4>
                                 <div class="soccer">
-                                    <h4 class="sub-creations ">
-                                        SOCCER<br> TEAM VR
-                                    </h4>
                                 </div>
                             </a>
                         </div>
                         <div class="col-3">
                             <a href="#">
+                                <h4 class="sub-creations">
+                                    THE<br> GRID
+                                </h4>
                                 <div class="car">
-                                    <h4 class="sub-creations">
-                                        THE<br> GRID
-                                    </h4>
                                 </div>
                             </a>
                         </div>
@@ -138,37 +141,37 @@
                     <div class="row">
                         <div class="col-3 ">
                             <a href="#">
+                                <h4 class="sub-creations">
+                                    FROM UP<br> ABOVE VR
+                                </h4>
                                 <div class="race">
-                                    <h4 class="sub-creations">
-                                        FROM UP<br> ABOVE VR
-                                    </h4>
                                 </div>
                             </a>
                         </div>
                         <div class="col-3 ">
                             <a href="#">
+                                <h4 class="sub-creations">
+                                    POCKET<br> BOREALIS
+                                </h4>
                                 <div class="aerial">
-                                    <h4 class="sub-creations">
-                                        POCKET<br> BOREALIS
-                                    </h4>
                                 </div>
                             </a>
                         </div>
                         <div class="col-3 ">
                             <a href="#">
+                                <h4 class="sub-creations">
+                                    THE<br> CURIOSITY
+                                </h4>
                                 <div class="robot">
-                                    <h4 class="sub-creations">
-                                        THE<br> CURIOSITY
-                                    </h4>
                                 </div>
                             </a>
                         </div>
                         <div class="col-3 ">
                             <a href="#">
+                                <h4 class="sub-creations">
+                                    MAKE IT<br> FISHEYE
+                                </h4>
                                 <div class="picture">
-                                    <h4 class="sub-creations">
-                                        MAKE IT<br> FISHEYE
-                                    </h4>
                                 </div>
                             </a>
                         </div>
@@ -177,6 +180,73 @@
             </div>
         </div>
     </section>
+    <footer>
+        <section class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="navbar navbar-expand-lg col-12 ">
+                            <div class="row">
+                                <a class="navbar-brand" href="#">loopstudios</a>
+                                <div class="collapse navbar-collapse " id="footerText">
+                                    <ul class="navbar-nav mb-2 mb-lg-0">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" aria-current="page" href="#">About</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Careers</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Events</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Products</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Support</a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="navbar navbar-expand-lg col-12 h-100">
+                            <div class="row">
+                                <div class="collapse navbar-collapse justify-content-end" id="footerText">
+                                    <ul class="navbar-nav mb-2 mb-lg-0">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" aria-current="page" href="#">
+                                                <i class="fab fa-facebook-square"></i>
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">
+                                                <i class="fab fa-twitter"></i>
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">
+                                                <i class="fab fa-pinterest"></i>
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">
+                                                <i class="fab fa-instagram"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <p class="footer-copyright justify-content-end d-flex">&copy;2021 Loopstudios.All rights reserved.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 
