--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="./assets/img/desktop/image-interactive.jpg" alt="interactive" class="img-fluid">
+                    <img src="./assets/img/desktop/image-interactive.jpg" alt="interactive" class="img-fluid d-none d-md-block">
+                    <img src="./assets/img/mobile/image-interactive.jpg" alt="interactive" class="img-fluid d-block d-md-none">
                 </div>
                 <div class="ab-leader col-md-6">
                     <div class="row align-content-end h-100">
@@ -91,7 +92,7 @@
                         <h3 class="creations col-md-6">
                             OUR CREATIONS
                         </h3>
-                        <a href="#" class="see">
+                        <a href="#" class="see d-none d-md-flex">
                             SEE ALL
                         </a>
                     </div>
@@ -167,6 +168,9 @@
                             </a>
                         </div>
                     </div>
+                    <a href="#" class="see d-flex d-md-none">
+                        SEE ALL
+                    </a>
                 </div>
             </div>
         </div>
@@ -176,7 +180,7 @@
             <div class="container ">
                 <div class="row ">
                     <div class="col-md-6 ">
-                        <div class="navbar navbar-expand-lg col-12 ">
+                        <div class="navbar navbar-expand-lg col-12 justify-content-center justify-content-md-between">
                             <div class="row ">
                                 <a class="navbar-brand " href="# ">loopstudios</a>
                                 <ul class="navbar-nav mb-2 mb-lg-0 ">
@@ -201,7 +205,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 ">
-                        <div class="navbar navbar-expand-lg col-12 h-100 ">
+                        <div class="navbar navbar-expand-lg col-12 h-100 justify-content-center justify-content-md-between">
                             <div class="row align-items-md-center">
                                 <ul class="navbar-nav mb-2 mb-lg-0 justify-content-md-end d-flex">
                                     <li class="nav-item ">
@@ -225,7 +229,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                                <p class="footer-copyright justify-content-md-end d-flex">&copy;2021 Loopstudios.All rights reserved.</p>
+                                <p class="footer-copyright justify-content-md-end justify-content-center d-flex">&copy;2021 Loopstudios.All rights reserved.</p>
                             </div>
                         </div>
                     </div>
@@ -234,6 +238,7 @@
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js " integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4 " crossorigin="anonymous "></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
