ajusts and mobile refactoring

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="col-md-12">
                     <div class="row">
                         <div class="col-md-3">
-                            <a href="#">
+                            <a href="#" class="box-creations">
                                 <h4 class="sub-creations">
                                     DEEP<br> EARTH
                                 </h4>
@@ -108,7 +108,7 @@
                             </a>
                         </div>
                         <div class="col-md-3">
-                            <a href="#">
+                            <a href="#" class="box-creations">
                                 <h4 class="sub-creations">
                                     NIGHT<br> ARCADE
                                 </h4>
@@ -116,7 +116,7 @@
                             </a>
                         </div>
                         <div class=" col-md-3 ">
-                            <a href="# ">
+                            <a href="# " class="box-creations">
                                 <h4 class="sub-creations ">
                                     SOCCER<br> TEAM VR
                                 </h4>
@@ -124,7 +124,7 @@
                             </a>
                         </div>
                         <div class="col-md-3 ">
-                            <a href="# ">
+                            <a href="# " class="box-creations">
                                 <h4 class="sub-creations ">
                                     THE<br> GRID
                                 </h4>
@@ -136,7 +136,7 @@
                 <div class="col-md-12 ">
                     <div class="row ">
                         <div class="col-md-3 ">
-                            <a href="# ">
+                            <a href="# " class="box-creations">
                                 <h4 class="sub-creations ">
                                     FROM UP<br> ABOVE VR
                                 </h4>
@@ -144,7 +144,7 @@
                             </a>
                         </div>
                         <div class="col-md-3 ">
-                            <a href="# ">
+                            <a href="# " class="box-creations">
                                 <h4 class="sub-creations ">
                                     POCKET<br> BOREALIS
                                 </h4>
@@ -152,7 +152,7 @@
                             </a>
                         </div>
                         <div class="col-md-3 ">
-                            <a href="# ">
+                            <a href="# " class="box-creations">
                                 <h4 class="sub-creations ">
                                     THE<br> CURIOSITY
                                 </h4>
@@ -160,7 +160,7 @@
                             </a>
                         </div>
                         <div class="col-md-3 ">
-                            <a href="# ">
+                            <a href="# " class="box-creations">
                                 <h4 class="sub-creations ">
                                     MAKE IT<br> FISHEYE
                                 </h4>
@@ -207,7 +207,7 @@
                     <div class="col-md-6 ">
                         <div class="navbar navbar-expand-lg col-12 h-100 justify-content-center justify-content-md-between">
                             <div class="row align-items-md-center">
-                                <ul class="navbar-nav mb-2 mb-lg-0 justify-content-md-end d-flex">
+                                <ul class="navbar-nav mb-2 mb-lg-0 justify-content-md-end d-flex mobile-redes">
                                     <li class="nav-item ">
                                         <a class="nav-link active " aria-current="page " href="# ">
                                             <i class="fab fa-facebook-square "></i>
