--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loopstudios | Challenge</title>
-    <link rel="stylesheet" href="./assets/css/loop-main.css">
+    <link rel="stylesheet" href="./assets/css/loop-main.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -66,8 +66,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="./assets/img/desktop/image-interactive.jpg" alt="interactive" class="img-fluid d-none d-md-block">
-                    <img src="./assets/img/mobile/image-interactive.jpg" alt="interactive" class="img-fluid d-block d-md-none">
+                    <img src="./img/desktop/image-interactive.jpg" alt="interactive" class="img-fluid d-none d-md-block">
+                    <img src="./img/mobile/image-interactive.jpg" alt="interactive" class="img-fluid d-block d-md-none">
                 </div>
                 <div class="ab-leader col-md-6">
                     <div class="row align-content-end h-100">
