--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loopstudios | Challenge</title>
+    <link rel="shortcut icon" src="./img/favicon-32x32.png">
     <link rel="stylesheet" href="./assets/css/loop-main.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
